# Portfolio

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_GUIDANCE.md  CLAUDE.md  CONTRIBUTING.md  GIT_AGENTS.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compose.yaml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  redocly.yaml
.github/workflows/: CI_PLAYBOOK.md  README.md  verify.yml
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260718_0001_submission_boundary.py  20260720_0002_result_event_receipts.py
apps/api/src/reactorfront_api/: __init__.py  app.py  domain.py  event_contracts.py  events_main.py  main.py  outbox.py  outbox_main.py  persistence.py  rabbitmq.py  request_limits.py  result_consumer.py  schemas.py  service.py  settings.py  storage.py
apps/api/tests/: fakes.py  openapi_contract.py  test_app.py  test_check_docs.py  test_contracts_and_schemas.py  test_events_main.py  test_integration.py  test_outbox.py  test_outbox_main.py  test_persistence.py  test_rabbitmq.py  test_request_limits.py  test_result_consumer.py  test_result_persistence.py  test_service.py  test_storage.py  test_verify_script.py
apps/ml/: MODEL_CARD.md  README.md  audit-requirements.txt  model.expected.sha256  pyproject.toml
apps/ml/data/: training.json
apps/ml/src/reactorfront_ml/: __init__.py  celery_app.py  domain.py  event_contracts.py  events.py  generate_model.py  health.py  logging_config.py  model.py  pdf_processing.py  processor.py  rabbitmq.py  runtime.py  settings.py  storage.py
apps/ml/tests/: __init__.py  fakes.py  test_celery_app.py  test_event_contracts.py  test_logging_and_cli.py  test_model.py  test_pdf_processing.py  test_processor.py  test_rabbitmq.py  test_runtime_health.py  test_settings.py  test_storage.py  test_verify_ml_runtime_script.py
apps/web/: README.md  next.config.ts  package.json  tsconfig.json  vitest.config.mts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/components/: document-workflow.test.tsx  document-workflow.tsx
apps/web/src/lib/: browser-api.test.ts  browser-api.ts  contracts.test.ts  contracts.ts  file-validation.test.ts  polling.test.ts  (+6 more)
docs/adr/: 0001-modular-monorepo.md  0002-target-document-intelligence-platform.md  0003-initial-technology-stack.md  0004-api-state-ownership-and-transactional-outbox.md  0005-repository-owned-ai-collaboration.md  0006-consolidate-ai-guidance.md  0007-authentication-session-and-api-authorization.md  README.md
docs/ai/: PR_REVIEW.md  README.md  evidence-policy.md  operating-contract.md  task-lifecycle.md
docs/ai/prompts/: README.md  independent-review.md  post-merge-reconciliation.md  task-bootstrap.md
docs/architecture/: README.md
docs/delivery/: 0001-first-vertical-slice.md  0002-second-vertical-slice.md
infra/docker/: README.md
infra/docker/api/: Dockerfile
infra/docker/minio/: Dockerfile
infra/docker/ml/: Dockerfile
infra/docker/web/: Dockerfile
scripts/: README.md  check-generated-contract.mjs  check_docs.py  check_ml_compose_boundary.py  pdf_fixture.py  plan_ci.py  prepare_integration.py  stamp-generated-contract.mjs  validate-events.mjs  validate-openapi.mjs  verify.py  verify_ml_model.py  verify_ml_runtime.py  verify_outbox_runtime.py  verify_result_consumer_runtime.py
tests/e2e/: README.md  document-classification.spec.ts  pdf-fixture.ts  tsconfig.json
tests/fixtures/: README.md  canonical_invoice.txt  canonical_report.txt
tests/integration/: README.md
(+6 files in other folders)
