[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "reactorfront-api"
version = "0.1.0"
description = "API-owned document submission, outbox, and result persistence boundary"
readme = "README.md"
requires-python = "==3.13.*"
license = "MIT"
dependencies = [
  "alembic==1.18.5",
  "boto3==1.43.51",
  "fastapi==0.139.2",
  "jsonschema==4.26.0",
  "pika==1.4.1",
  "psycopg[binary]==3.3.4",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "python-multipart==0.0.32",
  "referencing==0.37.0",
  "sqlalchemy==2.0.51",
  "uvicorn==0.51.0",
]

[dependency-groups]
dev = [
  "boto3-stubs[s3]==1.43.51",
  "httpx2==2.7.0",
  "mypy==2.3.0",
  "pip-audit==2.10.1",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "pyyaml==6.0.3",
  "ruff==0.15.22",
  "types-jsonschema==4.26.0.20260518",
  "types-pika-ts==1.4.0.20260518",
  "types-pyyaml==6.0.12.20260518",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reactorfront_api"]

[tool.uv]
required-version = "==0.11.29"

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "integration: requires real PostgreSQL, S3-compatible object storage, and RabbitMQ",
]

[tool.coverage.run]
branch = true
source = ["reactorfront_api"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
packages = ["reactorfront_api"]

[[tool.mypy.overrides]]
module = "alembic.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
