[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "reactorfront-ml"
version = "0.1.0"
description = "Reproducible document classification and worker publication boundary"
readme = "README.md"
requires-python = "==3.13.*"
license = "MIT"
dependencies = [
  "boto3==1.43.51",
  "celery==5.6.3",
  "jsonschema==4.26.0",
  "numpy==2.5.1",
  "pika==1.4.1",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "pypdf==6.14.2",
  "referencing==0.37.0",
  "torch==2.13.0",
]

[dependency-groups]
dev = [
  "boto3-stubs[s3]==1.43.51",
  "mypy==2.3.0",
  "pip-audit==2.10.1",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "ruff==0.15.22",
  "types-jsonschema==4.26.0.20260518",
  "types-pika-ts==1.4.0.20260518",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reactorfront_ml"]

[tool.uv]
required-version = "==0.11.29"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["../.."]
markers = [
  "integration: requires real MinIO and RabbitMQ",
]

[tool.coverage.run]
branch = true
source = ["reactorfront_ml"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["reactorfront_ml"]

[[tool.mypy.overrides]]
module = ["celery.*", "kombu.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
